[package]
name = "ipmq"
version = "0.1.0"
authors = ["Anton Jansson <anton_jansson@live.se>"]
edition = "2018"

[features]
default = []
python_wrapper = ["pyo3"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"
regex = "1"
libc = "0.2"
tempfile = "3.1.0"
pyo3 = { version = "0.13.2", features = ["extension-module"], optional = true }

[lib]
name = "ipmq"
crate-type = ["rlib", "cdylib"]

[dev-dependencies]
opencv = "0.53"